--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>GreenEarth | Progetti di riforestazione e pulizia degli oceani</title>
 </head>
 <body>
+    <header>
+
+    </header>
     
 </body>
 </html>
