aggiunta menu navigazione

--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
     <title>GreenEarth | Progetti di riforestazione e pulizia degli oceani</title>
 </head>
 <body>
-    <header>
+    <header class="site-header">
+        <div class="nav-container">
+            <a class="logo" href="#">
+                <img src="img/logo.svg" alt="GreenEarth">
+                GreenEarth</a>
+        </div>
+
+        <button class="nav-toggle" type="button" aria-label="apri il menu" aria-expanded="false" aria-controls="site-menu">
+            <spam></spam>
+            <spam></spam>
+            <spam></spam>
+        </button>
+
+        <nav>
+            <ul class="site-menu" id="site-menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Progetti</a></li>
+                <li><a href="#">Chi siamo</a></li>
+                <li><a href="#">Contatti</a></li>
+            </ul>
+        </nav>
 
     </header>
     
